--- a/qr_cu_galerie_index.html
+++ b/qr_cu_galerie_index.html
@@ -75,9 +75,11 @@ Notă: dacă nu vrei să folosești GitHub, poți folosi Netlify (drag & drop al
   <script>
     // Lista imaginilor - înlocuiește aici cu numele fișierelor tale din folderul /images
     const images = [
-      'images/flyer1.jpg',
-      'images/flyer2.jpg',
-      'images/flyer3.jpg'
+      'images/pre-tatuaj pg 1.jpg'
+      'images/pre-tatuaj pg 2.jpg'
+      'images/post-tatuaj pg 1.jpg'
+      'images/post-tatuaj pg 2.jpg'
+     'images/Folie protectie.jpg'
       // adaugă câte vrei
     ];
 
