--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ Notă: dacă nu vrei să folosești GitHub, poți folosi Netlify (drag & drop al
   <script>
     // Lista imaginilor - înlocuiește aici cu numele fișierelor tale din folderul /images
     const images = [
-      'images/pre-tatuaj pg 1.jpg'
-      'images/pre-tatuaj pg 2.jpg'
-      'images/post-tatuaj pg 1.jpg'
-      'images/post-tatuaj pg 2.jpg'
-     'images/Folie protectie.jpg'
+      'images/Folie vindecare.jpg'
+      'images/Post tatuaj.jpg'
+      'images/Post tatuaj pg 2.jpg'
+      'images/Pre tatuaj pg 1.jpg'
+     'images/Pre tatuaj pg 2.jpg'
       // adaugă câte vrei
     ];
 
