--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       'images/Post tatuaj.jpg',
       'images/Post tatuaj pg 2.jpg',
       'images/Pre tatuaj pg 1.jpg',
-      'images/Pre tatuaj pg 2.jpg '
+      'images/Pre tatuaj pg 2.jpg ',
       // adaugă aici restul pozelor, fiecare între ghilimele și separate prin virgulă
     ];
 
