--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   <script>
     // Lista imaginilor - înlocuiește cu exact numele fișierelor tale din folderul /images
     const images = [
-      'images/Folie vindecare.jpg',
-      'images/Post tatuaj.jpg',
-      'images/Post tatuaj pg 2.jpg',
-      'images/Pre tatuaj pg 1.jpg',
-      'images/Pre tatuaj pg 2.jpg ',
+      'images/Pre tatuaj pg 1.png',
+      'images/Pre tatuaj pg 2.png',
+      'images/Post tatuaj.png',
+      'images/Post tatuaj pg 2.png',
+      'images/Folie vindecare.png',
       // adaugă aici restul pozelor, fiecare între ghilimele și separate prin virgulă
     ];
 
