--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <header>
-    <h1>Flyere / Galerie</h1>
+    <h1>Instructiuni Suchici Studio </h1>
     <p>Scanează codul QR și derulează pentru a vedea toate flyerele.</p>
   </header>
 
