--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
   <header>
     <h1>Instructiuni Suchici Studio </h1>
-    <p>Scanează codul QR și derulează pentru a vedea toate flyerele.</p>
+    <p>Respectă pașii de îngrijire pre și post tatuaj – altfel riști durere,
+      vindecare grea și un rezultat mai puțin reușit.</p>
   </header>
 
   <!-- Secțiune Pre Tatuaj -->
