--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     }
     h1, h2 {
       margin: 16px 0 8px;
+      text-align: center; /* Centrare titluri */
+    }
+    header p {
+      text-align: center; /* Centrare paragrafe din header */
     }
     .section {
       margin-bottom: 40px;
@@ -26,6 +30,8 @@
       box-shadow: 0 4px 12px rgba(255,255,255,0.2);
       cursor: pointer;
       display: block;
+      margin-left: auto; /* Centrare imagine */
+      margin-right: auto;
     }
     /* Lightbox */
     .overlay {
@@ -68,7 +74,7 @@
 <body>
 
   <header>
-    <h1>Instructiuni Suchici Studio </h1>
+    <h1>Instructiuni Suchici Studio</h1>
     <p>Respectă pașii de îngrijire pre și post tatuaj – altfel riști durere,
       vindecare grea și un rezultat mai puțin reușit.</p>
   </header>
