--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       margin: 0;
       padding: 24px;
     }
+    .container {
+      max-width: 900px;       /* Lățimea maximă pe desktop */
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 16px;        /* Padding intern pe lateral */
+    }
     h1, h2 {
       margin: 16px 0 8px;
       text-align: center; /* Centrare titluri */
@@ -73,28 +79,30 @@
 </head>
 <body>
 
-  <header>
-    <h1>Instructiuni Suchici Studio</h1>
-    <p>Respectă pașii de îngrijire pre și post tatuaj – altfel riști durere,
-      vindecare grea și un rezultat mai puțin reușit.</p>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Instructiuni Suchici Studio</h1>
+      <p>Respectă pașii de îngrijire pre și post tatuaj – altfel riști durere,
+        vindecare grea și un rezultat mai puțin reușit.</p>
+    </header>
 
-  <!-- Secțiune Pre Tatuaj -->
-  <div class="section">
-    <h2>Pre Tatuaj</h2>
-    <div class="gallery" id="pre-tatuaj"></div>
-  </div>
+    <!-- Secțiune Pre Tatuaj -->
+    <div class="section">
+      <h2>Pre Tatuaj</h2>
+      <div class="gallery" id="pre-tatuaj"></div>
+    </div>
 
-  <!-- Secțiune Post Tatuaj -->
-  <div class="section">
-    <h2>Post Tatuaj</h2>
-    <div class="gallery" id="post-tatuaj"></div>
-  </div>
+    <!-- Secțiune Post Tatuaj -->
+    <div class="section">
+      <h2>Post Tatuaj</h2>
+      <div class="gallery" id="post-tatuaj"></div>
+    </div>
 
-  <!-- Secțiune Instrucțiuni Folie -->
-  <div class="section">
-    <h2>Instrucțiuni Folie</h2>
-    <div class="gallery" id="folie"></div>
+    <!-- Secțiune Instrucțiuni Folie -->
+    <div class="section">
+      <h2>Instrucțiuni Folie</h2>
+      <div class="gallery" id="folie"></div>
+    </div>
   </div>
 
   <!-- Lightbox -->
